compiler/lib/test/parser_golden/module_for_before_import.golden
ERROR: test.act:3:1:
  |
3 | import math
  | ^
unexpected 'i'
expecting "else", end of input, end of line, or statement
